1.4.0 - TBD

* Chunky now requires Java 8 to run.
* Modernized the Chunky User Interface by rewriting it in JavaFX.
* Most of the UI remains similar to the old version, but some parts
  were redesigned:
    * Controls for multiple cameras have been simplified.
    * The Highlight tab has been merged into the Options tab.
    * The gradient editor and color pickers were slightly redesigned.
    * Added some sky gradient presets.
    * Removed the fullscreen option for the preview window.
* Removed old features that were not well supported. The goal is to
  make these into separate plugins:
    * Removed the benchmark tool.
    * Removed the experimental OpenCL renderer.
* Holding Control while moving the camera multiplies move distance by 100.
* The render preview scaling option has been moved into a context menu.
  Right clicking the render preview window brings up the scaling menu.
* Added option to show guide grid in the render preview. The option is
  accessed through the right-click context menu.
* Pressing space in the render preview window toggles rendering.
* Fixed player entities not being saved if they were the only entity type in a
  scene.
* Fixed bug preventing new players from being added if no players were
  already loaded.
* Minor changes to the UI:
    * Added an icon to the camera view visualization.
    * Removed the chunk loading indicator icon.
    * Removed the player Y position indicator.

1.3.8 - 2016-04-03

* Fixed water being rendered on sign blocks below the water height in water
  world mode.
* The scene/world directory selection dialogs now indicate if a valid
  directory is selected.
* Added button to scale canvas width/height by a factor of 1.5.
* Replaced the preview window scaling buttons with a drop-down list.
* Added Entities tab in the Render Controls dialog, allowing posing and
  skinning of player entities.
* Fixed chunk loading error that caused Chunky to hang while loading chunks
  if a font texture was missing.